Redeploying Flask API

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,21 +9,30 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Ministry</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <div class="logo">Ministry Logo</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Programs</a></li>
+                <li><a href="#">Get Involved</a></li>
+            </ul>
+            <a href="#" class="donate-btn">Donate Now</a>
         </nav>
-        <select id="language-selector">
-            <option value="en">English</option>
-            <option value="te">తెలుగు</option>
-            <option value="hi">हिंदी</option>
-        </select>
     </header>
-    <main>
-        <h2 id="welcome-text">Sharing the Gospel of Jesus Christ</h2>
-        <p id="mission-text">Helping the poor and supporting orphanages.</p>
-    </main>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Join Us.<br>Change Their World.</h1>
+            <p>Change Yours. This Will Change Everything.</p>
+            <a href="#" class="cta-button">Donate Now</a>
+        </div>
+    </section>
+
+    <section class="info">
+        <p>Each day, an estimated 734 children become orphans</p>
+    </section>
 </body>
 </html>
