--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Church Ministry - Pastor P Moses</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
+    <title>HOLY SPIRIT PRAYER HOUSE</title>
+    <link rel="stylesheet" href="frontend/css/styles.css">
+    <script src="frontend/js/script.js" defer></script>
 </head>
 <body>
 
@@ -13,8 +13,12 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Church Logo"> Church Ministry
+                <img src="images/logo.png" alt="Church Logo"> HOLY SPIRIT PRAYER HOUSE
             </div>
+
+            <!-- Hamburger Menu for Mobile -->
+            <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -25,21 +29,48 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="volunteer.html">Get Involved</a></li>
             </ul>
+
             <a href="donate.html" class="donate-btn">Donate Now</a>
         </nav>
+
+        <!-- Mobile Navigation -->
+        <div class="mobile-nav" id="mobileNav">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="sermons.html">Sermons</a>
+            <a href="ministries.html">Ministries</a>
+            <a href="orphanage.html">Orphanage Home</a>
+            <a href="events.html">Events</a>
+            <a href="contact.html">Contact</a>
+            <a href="volunteer.html">Get Involved</a>
+        </div>
     </header>
 
-    <!-- Hero Section with Background Video -->
+    <!-- Hero Section -->
     <section class="hero">
-        <video autoplay muted loop class="hero-video">
-            <source src="videos/hero-video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
         <div class="overlay"></div>
         <div class="hero-content">
-            <h1>Inspired by Faith, Driven by Love</h1>
+            <img src="images/pic1.webp" alt="Church Highlight" class="highlight-img">
+            <h1>Welcome to HOLY SPIRIT PRAYER HOUSE</h1>
             <p>Transforming lives through the love of Christ and community service.</p>
             <a href="visit.html" class="cta-button">Plan Your Visit</a>
+        </div>
+    </section>
+
+    <!-- About Us Section -->
+    <section class="about-us">
+        <h2>Meet Our Founder & Family</h2>
+        <div class="about-content">
+            <div class="about-text">
+                <p><strong>Founder:</strong> Pastor P. Moses</p>
+                <p><strong>Late Wife:</strong> P. Mary Kumary</p>
+                <p><strong>Children:</strong> P. Benson Moses, P. Billygraham Moses & P. Esthar Roj</p>
+                <p>Our church was founded with a mission to spread love, faith, and support to the community.</p>
+            </div>
+            <div class="about-images">
+                <img src="images/founder.jpg" alt="Pastor P. Moses" class="about-img">
+                <img src="images/family.jpg" alt="Pastor's Family" class="about-img">
+            </div>
         </div>
     </section>
 
@@ -62,30 +93,9 @@
         </div>
     </section>
 
-    <!-- YouTube Channel Section -->
-    <section class="youtube-channel">
-        <h2>Watch Our YouTube Channel</h2>
-        <p>Join us for worship, sermons, and live events directly from our YouTube channel.</p>
-
-        <div class="video-container">
-            <iframe 
-                width="100%" height="500" 
-                src="https://www.youtube.com/embed?listType=user_uploads&list=UCXXXXXXXXXXXXXXXXXXXXXX" 
-                frameborder="0" 
-                allowfullscreen>
-            </iframe>
-        </div>
-
-        <div class="youtube-link">
-            <a href="https://www.youtube.com/@pastorpmoses" target="_blank" class="cta-button">
-                Visit Our YouTube Channel
-            </a>
-        </div>
-    </section>
-
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Church Ministry | All Rights Reserved</p>
+        <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
     </footer>
 
 </body>
