changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,83 +11,65 @@
 
     <!-- Top Navigation Bar -->
     <header>
-        <nav>
-            <div class="logo">
-                <img src="images/logo.png" alt="Church Logo"> HOLY SPIRIT PRAYER HOUSE
-            </div>
-
-            <!-- Hamburger Menu for Mobile -->
-            <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="sermons.html">Sermons</a></li>
-                <li><a href="ministries.html">Ministries</a></li>
-                <li><a href="orphanage.html">Orphanage Home</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="volunteer.html">Get Involved</a></li>
-            </ul>
-
-            <a href="donate.html" class="donate-btn">Donate Now</a>
-        </nav>
-
-        <!-- Mobile Navigation -->
-        <div class="mobile-nav" id="mobileNav">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="sermons.html">Sermons</a>
-            <a href="ministries.html">Ministries</a>
-            <a href="orphanage.html">Orphanage Home</a>
-            <a href="events.html">Events</a>
-            <a href="contact.html">Contact</a>
-            <a href="volunteer.html">Get Involved</a>
+        <div class="logo-container">
+            <img src="images/logo.png" alt="Church Logo">
+            <h1>HOLY SPIRIT PRAYER HOUSE</h1>
         </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="sermons.html">SERMONS</a></li>
+                <li><a href="ministries.html">MINISTRIES</a></li>
+                <li><a href="orphanage.html">ORPHANAGE</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="volunteer.html">GET INVOLVED</a></li>
+            </ul>
+        </nav>
+        <a href="donate.html" class="donate-btn">DONATE NOW</a>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
         <div class="overlay"></div>
         <div class="hero-content">
-            <img src="images/pic1.webp" alt="Church Highlight" class="highlight-img">
-            <h1>Welcome to HOLY SPIRIT PRAYER HOUSE</h1>
-            <p>Transforming lives through the love of Christ and community service.</p>
-            <a href="visit.html" class="cta-button">Plan Your Visit</a>
+            <h2>INSPIRED BY FAITH</h2>
+            <h1>TRANSFORMING LIVES THROUGH THE LOVE OF CHRIST</h1>
+            <p>Bringing Hope, Love, and Support to the Community</p>
+            <a href="visit.html" class="cta-button">PLAN YOUR VISIT</a>
         </div>
     </section>
 
     <!-- About Us Section -->
     <section class="about-us">
-        <h2>Meet Our Founder & Family</h2>
+        <h2>OUR FOUNDER & FAMILY</h2>
         <div class="about-content">
-            <div class="about-text">
-                <p><strong>Founder:</strong> Pastor P. Moses</p>
-                <p><strong>Late Wife:</strong> P. Mary Kumary</p>
-                <p><strong>Children:</strong> P. Benson Moses, P. Billygraham Moses & P. Esthar Roj</p>
-                <p>Our church was founded with a mission to spread love, faith, and support to the community.</p>
-            </div>
-            <div class="about-images">
-                <img src="images/founder.jpg" alt="Pastor P. Moses" class="about-img">
-                <img src="images/family.jpg" alt="Pastor's Family" class="about-img">
-            </div>
+            <p><strong>Founder:</strong> Pastor P. Moses</p>
+            <p><strong>Late Wife:</strong> P. Mary Kumary</p>
+            <p><strong>Children:</strong> P. Benson Moses, P. Billygraham Moses & P. Esthar Roj</p>
+            <p>Our church is dedicated to spreading faith, love, and service.</p>
+        </div>
+        <div class="about-images">
+            <img src="images/founder.jpg" alt="Pastor P. Moses">
+            <img src="images/family.jpg" alt="Church Family">
         </div>
     </section>
 
     <!-- Ministries Section -->
     <section class="ministries">
-        <h2>Our Ministries</h2>
+        <h2>OUR MINISTRIES</h2>
         <div class="ministry-list">
             <div class="ministry">
-                <h3>Children’s Ministry</h3>
+                <h3>CHILDREN’S MINISTRY</h3>
                 <p>Helping kids grow in faith through engaging lessons and activities.</p>
             </div>
             <div class="ministry">
-                <h3>Youth Ministry</h3>
+                <h3>YOUTH MINISTRY</h3>
                 <p>Empowering young people to live for Christ.</p>
             </div>
             <div class="ministry">
-                <h3>Community Outreach</h3>
+                <h3>COMMUNITY OUTREACH</h3>
                 <p>Serving the poor, supporting orphanages, and spreading hope.</p>
             </div>
         </div>
