changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,7 @@
         </div>
     </header>
 
-    <!-- ✅ Mobile Navigation Menu (Hidden by Default) -->
+    <!-- ✅ Mobile Navigation Menu -->
     <ul id="mobileNav">
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
@@ -76,7 +76,8 @@
         <h2>WATCH OUR SERMONS</h2>
         <div class="video-container">
             <iframe 
-                src="https://www.youtube.com/embed?listType=user_uploads&list=UCXXXXXXXXXXXXXXXXXXXXXX"
+                width="560" height="315" 
+                src="https://www.youtube.com/embed/videoseries?list=UCrSpcQdO82qBlcfhWT9MQTw" 
                 frameborder="0" allowfullscreen>
             </iframe>
         </div>
