changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,11 @@
 <body>
 
     <!-- ✅ Header Section -->
-    <header>
+    <header id="mainHeader">
+        <div class="logo">
+            <img src="images/logo.png" alt="Church Logo">
+        </div>
+
         <!-- Mobile Menu Button -->
         <button id="menuButton" onclick="toggleMenu()">☰</button>
 
@@ -40,11 +44,6 @@
                 <img src="images/facebook.png" alt="Facebook">
             </a>
         </div>
-
-        <!-- ✅ Logo Positioned to the Right -->
-        <div class="logo">
-            <img src="images/logo.png" alt="Church Logo">
-        </div>
     </header>
 
     <!-- ✅ Mobile Navigation Menu -->
@@ -71,6 +70,15 @@
         </div>
     </section>
 
+    <!-- ✅ Founder & Family Section -->
+    <section class="founder">
+        <h2>OUR FOUNDER & FAMILY</h2>
+        <p><strong>Founder:</strong> Pastor P. Moses</p>
+        <p><strong>Late Wife:</strong> P. Mary Kumary</p>
+        <p><strong>Children:</strong> P. Benson Moses, P. Billygraham Moses & P. Esthar Roj</p>
+        <p>Our church is dedicated to spreading faith, love, and service.</p>
+    </section>
+
     <!-- ✅ Embedded YouTube Videos Section -->
     <section class="videos">
         <h2>WATCH OUR SERMONS</h2>
@@ -89,17 +97,6 @@
     <!-- ✅ Footer Section -->
     <footer>
         <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
-        <div class="social-icons">
-            <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
-                <img src="images/youtube.png" alt="YouTube">
-            </a>
-            <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-            <a href="https://www.facebook.com/holy.jesus132" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-        </div>
     </footer>
 
 </body>
