changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,8 @@
             <img src="images/logo.png" alt="Church Logo">
         </div>
 
-        <!-- Mobile Menu Button -->
-        <button id="menuButton" onclick="toggleMenu()">☰</button>
-
         <nav>
+            <!-- ✅ Desktop Navigation -->
             <ul class="nav-links">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
@@ -30,23 +28,13 @@
                 <li><a href="volunteer.html">GET INVOLVED</a></li>
                 <li><a href="donate.html" class="donate-btn">DONATE NOW</a></li>
             </ul>
-        </nav>
 
-        <!-- ✅ Social Media Links -->
-        <div class="social-icons">
-            <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
-                <img src="images/youtube.png" alt="YouTube">
-            </a>
-            <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-            <a href="https://www.facebook.com/holy.jesus132" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-        </div>
+            <!-- ✅ Mobile Menu Button -->
+            <button id="menuButton" onclick="toggleMenu()">☰</button>
+        </nav>
     </header>
 
-    <!-- ✅ Mobile Navigation Menu -->
+    <!-- ✅ Mobile Navigation Menu (Hidden by Default) -->
     <ul id="mobileNav">
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
@@ -69,35 +57,6 @@
             <a href="visit.html" class="cta-button">PLAN YOUR VISIT</a>
         </div>
     </section>
-
-    <!-- ✅ Founder & Family Section -->
-    <section class="founder">
-        <h2>OUR FOUNDER & FAMILY</h2>
-        <p><strong>Founder:</strong> Pastor P. Moses</p>
-        <p><strong>Late Wife:</strong> P. Mary Kumary</p>
-        <p><strong>Children:</strong> P. Benson Moses, P. Billygraham Moses & P. Esthar Roj</p>
-        <p>Our church is dedicated to spreading faith, love, and service.</p>
-    </section>
-
-    <!-- ✅ Embedded YouTube Videos Section -->
-    <section class="videos">
-        <h2>WATCH OUR SERMONS</h2>
-        <div class="video-container">
-            <iframe 
-                width="560" height="315" 
-                src="https://www.youtube.com/embed/videoseries?list=UCrSpcQdO82qBlcfhWT9MQTw" 
-                frameborder="0" allowfullscreen>
-            </iframe>
-        </div>
-        <a href="https://www.youtube.com/@pastorpmoses" target="_blank" class="cta-button">
-            VISIT OUR YOUTUBE CHANNEL
-        </a>
-    </section>
-
-    <!-- ✅ Footer Section -->
-    <footer>
-        <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
-    </footer>
 
 </body>
 </html>
