--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,9 @@
             <img src="images/logo.png" alt="Church Logo">
         </div>
 
+        <!-- ✅ Mobile Menu Button -->
+        <button id="menuButton" onclick="toggleMenu()">☰</button>
+
         <nav>
             <!-- ✅ Desktop Navigation -->
             <ul class="nav-links">
@@ -28,9 +31,6 @@
                 <li><a href="volunteer.html">GET INVOLVED</a></li>
                 <li><a href="donate.html" class="donate-btn">DONATE NOW</a></li>
             </ul>
-
-            <!-- ✅ Mobile Menu Button -->
-            <button id="menuButton" onclick="toggleMenu()">☰</button>
         </nav>
     </header>
 
@@ -57,6 +57,24 @@
             <a href="visit.html" class="cta-button">PLAN YOUR VISIT</a>
         </div>
     </section>
+
+    <!-- ✅ Footer Section -->
+    <footer>
+        <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
+
+        <!-- ✅ Social Media Icons -->
+        <div class="social-icons">
+            <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
+                <img src="images/youtube.png" alt="YouTube">
+            </a>
+            <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com/holy.jesus132" target="_blank">
+                <img src="images/facebook.png" alt="Facebook">
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
