changes in code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,10 +13,10 @@
     <header id="mainHeader">
         <div class="header-container">
             <div class="logo">
-                <img src="images/logo.png" alt="Church Logo">
+                <img src="images/logo.png" alt="HSPH">
             </div>
-            <button id="menuButton" onclick="toggleMenu()">☰</button>
-            <nav>
+
+            <nav class = "desktop-nav">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -29,7 +29,23 @@
                     <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
                 </ul>
             </nav>
+
+            <button id = "menuButton" onclick="toggleMenu()">☰</button>
         </div>
+
+        <nav class = "mobile-nav" id = "mobileNav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="sermons.html">Sermons</a></li>
+                <li><a href="ministries.html">Ministries</a></li>
+                <li><a href="orphanage.html">Orphanage</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="volunteer.html">Get Involved</a></li>
+                <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- ✅ Hero Section -->
