--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
+    <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
+    <meta name="author" content="Holy Spirit Prayer House">
     <title>HOLY SPIRIT PRAYER HOUSE</title>
-    <link rel="icon" type="image/png" href="images/favicon.png"> <!-- Ensures favicon loads -->
+    <link rel="icon" type="image/png" href="images/favicon.png"> 
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
@@ -17,7 +20,7 @@
                 <img src="images/logo.png" alt="HSPH">
             </div>
 
-            <nav class = "desktop-nav">
+            <nav class="desktop-nav">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
