changes in code

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -19,7 +19,7 @@
 
     <!-- ✅ Main Content -->
     <main class="main-content">
-        Located in Oduru
+        <!-- Your main content goes here -->
     </main>
 
     <!-- ✅ Footer -->
